--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,54 @@ body {
 }
 
 .white-small-circle {
-  height: 5px;
-  width: 5px;
-  padding: 10px;
+  height: 25px;
+  width: 25px;
+
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.small-circle {
+  height: 25px;
+  width: 25px;
+
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0%;
+  bottom: -10px;
+}
+
+.white-small-circle img {
+  width: 11px;
+  height: 10px;
+}
+
+.plan-card-border {
+  border-radius: 45px;
+}
+
+hr {
+  width: 100%;
+  height: 3px !important;
+  color: #68bddf;
+}
+.line {
+  width: 90%;
+  margin-left: 10%;
+  height: 3px !important;
+  background-color: #e6f3f8;
+}
+
+.free-text {
+  padding-left: 34px;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: #00a0fa !important;
 }
