--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,8 +140,6 @@ hr {
   width: auto;
 }
 
-
-
 /* practice */
 /* .splash{
   cursor : pointer;
@@ -158,3 +156,43 @@ hr {
   transition : 0.5s;
   display : none;
 } */
+
+.get-started-heading {
+  font-weight: 900;
+  color: #00a0fa;
+}
+
+.add-picture {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bio-card-border {
+  border-radius: 19px;
+}
+
+.social-border {
+  border: 1px solid #ccc;
+}
+
+.social-ph::placeholder:focus-visible {
+  border: none;
+}
+
+.stepper {
+  height: 50px;
+  width: 50px;
+  border-radius: 50% !important;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stepper:active {
+  background-color: #00a0fa;
+}
